stream quality and encryption

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,43 +1,80 @@
-worker_processes  1;
+error_log error.log info;
+worker_processes 1;
 
 events {
-    worker_connections  1024;
+  worker_connections  1024;
 }
 
-
 http {
-  include       mime.types;
-  default_type  application/octet-stream;
-
-  sendfile           on;
-  keepalive_timeout  65;
-
   server {
     listen       81;
-    server_name  localhost;
+    server_name  twicecast.ovh;
+
+    error_log error.log;
+    access_log access.log;
 
     location /stat {
       rtmp_stat all;
+      rtmp_stat_stylesheet stat.xsl;
     }
 
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-      root   html;
+    location /stat.xsl {
+      alias stat.xsl;
     }
 
+    location /running {
+      root /etc/nginx;
+      location ~* {
+        add_header Content-Type text/plain;
+      	add_header Access-Control-Allow-Origin *;
+      }
+    }
+
+    location /log {
+      default_type text/plain;
+      alias error.log;
+    }
+
+    location /hls {
+      # Serve HLS fragments
+      types {
+        application/vnd.apple.mpegurl m3u8;
+	video/mp2t ts;
+      }
+      root /mnt;
+      add_header Cache-Control no-cache;
+      add_header Access-Control-Allow-Origin *;
+    }
   }
 }
-
 
 rtmp {
   server {
     listen 1935;
     chunk_size 4096;
 
-    application live {
+    access_log access.log;
 
+    application live {
       live on;
       record off;
+      wait_key on;
+      exec_kill_signal term;
+      exec bin/stream_start.sh $name;
+      exec bin/quality_low.sh $name 1935;
+      exec bin/quality_medium.sh $name 1935;
+      exec bin/quality_high.sh $name 1935;
+    }
+    
+    application show {
+    	live on;
+       	hls on;
+       	hls_path /mnt/hls/;
+       	hls_fragment 3;
+       	hls_playlist_length 60;
+	hls_nested on;
+       	# disable consuming the stream from nginx as rtmp
+       	deny play all;
     }
   }
 }
